--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "webpack-dev-server": "^3.11.0"
   },
   "scripts": {
-    "build:dev": "webpack --config webpack.dev.js --env UPLOAD_URL='https://upload-dev.n2s.ch'",
-    "build:prod": "webpack --config webpack.prod.js --env UPLOAD_URL='https://upload.n2s.ch'",
-    "dev-server": "webpack serve --config webpack.dev.js --env UPLOAD_URL='https://upload-dev.n2s.ch'"
+    "build:dev": "webpack --config webpack.dev.js --env POST_URL='https://app-dev-ws.n2s.ch/v1/debug/traceKey'",
+    "build:prod": "webpack --config webpack.prod.js --env POST_URL='https://app-prod-ws.n2s.ch/v1/debug/traceKey'",
+    "dev-server": "webpack serve --config webpack.dev.js --env POST_URL='https://app-dev-ws.n2s.ch/v1/debug/traceKey'"
   },
   "dependencies": {}
 }
